<resources>
    <string name="app_name">ClassRoom</string>

    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_log_in">Log in</string>
    <string name="login_text_forgot_password">Forgot password</string>
    <string name="login_text_no_account_sign_up">Don\'t have account? Sign up!</string>
    <string name="login_text_skip_login">Skip login</string>

    <string name="signup_title_signup">Signup</string>
    <string name="signup_hint_firstname">Firstname</string>
    <string name="signup_hint_lastname">Lastname</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_password">Password</string>
    <string name="signup_hint_re_password">Re-Password</string>
    <string name="signup_button_create_account">Create Account</string>
    <string name="signup_text_enter_activation_code"><u>Enter activation code</u></string>

    <string name="activate_account_title_activate_account">Activate Account</string>
    <string name="activate_account_text_enter_activation_code">Enter activation code:</string>
    <string name="activate_account_hint_example_code">eg. 4FG58KJ8</string>
    <string name="activate_account_text_email_address">Email address:</string>
    <string name="activate_account_hint_email_address">Registered email address...</string>
    <string name="activate_account_button_activate_account">Activate Account</string>
    <string name="activate_account_text_help_message">You should have received an email with the activation code.  Enter the code in the above box in order to activate your account.</string>

    <string name="activate_account_text_resend_activation_code"><u>Resend activation code</u></string>

    <string name="schedules_title_schedules">Schedules</string>
    <string name="schedules_text_no_schedules_created_yet">No schedules have been created yet!</string>
    <string name="schedules_text_your_schedules">Your schedules:</string>
    <string name="schedules_text_card_view_row_schedule_name">Schedule Name</string>
    <string name="schedules_button_map_view">Map View</string>

    <string name="create_schedule_title_create_schedule">Create schedule</string>
    <string name="create_schedule_text_new_schedule">New Schedule:</string>
    <string name="create_schedule_hint_schedule_name">Schedule name...</string>
    <string name="create_schedule_button_create_schedule">Create Schedule</string>

    <string name="create_schedule_entry_title_create_schedule_entry">Create Schedule Entry</string>
    <string name="create_schedule_entry_text_day_of_the_week">Day of the week:</string>
    <string name="create_schedule_entry_text_entry_type">Entry type:</string>
    <string name="create_schedule_entry_text_subject_name">Subject name:</string>
    <string name="create_schedule_entry_hint_subject_name">eg. Programming</string>
    <string name="create_schedule_entry_text_start_time">Start time:</string>
    <string name="create_schedule_entry_button_start_time">08:00</string>
    <string name="create_schedule_entry_text_end_time">End time:</string>
    <string name="create_schedule_entry_button_end_time">09:00</string>
    <string name="create_schedule_entry_text_building_name">Building name:</string>
    <string name="create_schedule_entry_hint_building_name">eg. Corpul A</string>
    <string name="create_schedule_entry_text_room_name">Room name:</string>
    <string name="create_schedule_entry_hint_room_name">eg. A209</string>
    <string name="create_schedule_entry_button_create_schedule_entry">Create Schedule Entry</string>

    <string name="current_schedule_title_current_schedule_name">Current Schedule Name</string>
    <string name="current_schedule_button_edit_schedule">Edit Schedule </string>
    <string name="current_schedule_text_monday">MONDAY</string>

    <string name="edit_schedule_title_edit_schedule">Edit Schedule</string>
    <string name="edit_schedule_text_schedule_name">Schedule name</string>
    <string name="edit_schedule_hint_enter_schedule_name">Enter schedule name...</string>
    <string name="edit_schedule_checkbox_set_schedule_as_default">Set schedule as default (for notifications)</string>
    <string name="edit_schedule_text_notification_minutes_before">Notification minutes before</string>
    <string name="edit_schedule_hint_notification_minutes_before">eg. 15</string>
    <string name="edit_schedule_text_notification_minutes_before_help">*How many minutes before the schedule activity\n starts should the notification be received.</string>
    <string name="edit_schedule_button_save_changes">Save Changes</string>
    <string name="edit_schedule_button_delete_schedule">Delete Schedule</string>

    <string name="edit_schedule_entry_title_edit_schedule_entry">Edit Schedule Entry</string>
    <string name="edit_schedule_entry_text_entry_type">Entry type:</string>
    <string name="edit_schedule_entry_text_subject_name">Subject name:</string>
    <string name="edit_schedule_entry_hint_subject_name">eg. Programming</string>
    <string name="edit_schedule_entry_text_start_time">Start time:</string>
    <string name="edit_schedule_entry_button_start_time">08:00</string>
    <string name="edit_schedule_entry_text_end_time">End time:</string>
    <string name="edit_schedule_entry_button_end_time">09:00</string>
    <string name="edit_schedule_entry_text_building_name">Building name:</string>
    <string name="edit_schedule_entry_hint_building_name">eg. Corpul A</string>
    <string name="edit_schedule_entry_text_room_name">Room name:</string>
    <string name="edit_schedule_entry_hint_room_name">eg. A209</string>
    <string name="edit_schedule_entry_button_save_changes">Save Changes</string>

    <string name="map_view_title_map_view">Map View</string>
    <string name="map_view_text_find_your_classroom">Find your classroom:</string>
    <string name="map_view_text_building">Building:</string>
    <string name="map_view_hint_building">eg. Corpul A</string>
    <string name="map_view_text_room">Room:</string>
    <string name="map_view_hint_room">eg. A209</string>
    <string name="map_view_button_find">Find</string>

    <string-array name="schedule_entry_types_array">
        <item>Course</item>
        <item>Lab</item>
        <item>Seminary</item>
        <item>Exam</item>
        <item>ExtracurricularActivity</item>
    </string-array>

    <string-array name="days_of_week_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
