<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xdot.classroom.screens.map_view.MapViewActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_classroom_2"/>

    <Button
        android:id="@+id/btnFind"
        android:layout_width="88dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:layout_weight="2"
        android:onClick="clicked"
        android:text="@string/map_view_button_find"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/tableLayout4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TableLayout
        android:layout_width="277dp"
        android:layout_height="130dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tableLayout4"
        android:layout_marginStart="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvFindYourClassroom"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_view_text_find_your_classroom"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBuilding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="10dp"
                android:text="@string/map_view_text_building"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etBuilding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:background="@color/color4"
                android:padding="6dp"
                android:hint="@string/map_view_hint_building"
                android:textCursorDrawable="@null"
                android:inputType="textPersonName"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/map_view_text_room"
                android:padding="10dp"
                android:textAlignment="textEnd"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:background="@color/color4"
                android:padding="6dp"
                android:textCursorDrawable="@null"
                android:hint="@string/map_view_hint_room"
                android:inputType="textPersonName"/>

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="440dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout4"
        app:layout_constraintVertical_bias="0.595"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_with_shadow_2">

        <fragment
            android:id="@+id/map"
            android:layout_marginTop="4dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.xdot.classroom.MapViewActivity" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
