<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xdot.classroom.screens.edit_schedule.EditScheduleActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_classroom_2"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:layout_width="337dp"
        android:layout_height="248dp"
        app:layout_goneMarginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/ivBackground"
        android:layout_marginTop="50dp"
        app:layout_constraintHorizontal_bias="0.516"
        android:id="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvScheduleName"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/edit_schedule_text_schedule_name"
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etScheduleName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/color4"
                android:ems="10"
                android:hint="@string/edit_schedule_hint_enter_schedule_name"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textCursorDrawable="@null"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/edit_schedule_button_save_changes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"/>

    <Button
        android:id="@+id/btnDeleteSchedule"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/color8"
        android:text="@string/edit_schedule_button_delete_schedule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveChanges"/>

</android.support.constraint.ConstraintLayout>
